# Hugin

./: .gitignore  Cargo.toml  README.adoc  result.toml
.github/workflows/: build.yml  test.yml
samples/: config.toml
src/: clone_pair.rs  job.rs  main.rs  session.rs
src/config/: ccfindersw.rs  mod.rs
src/error/: mod.rs
src/runner/: ccfindersw.rs  mod.rs
src/runner/ccfindersw/: mod.rs  parser.rs
