[package]
name = "hugin"
version = "0.1.0"
authors = ["ikubaku <hide4d51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
flexi_logger = "0.17"
log = "0.4"
chrono = "0.4"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
semver = { version = "0.11", features = [ "serde" ] }
tempfile = "3.2"
zip = "0.5"
shellexpand = "2.1"
nom = "6.1"
num-integer = "0.1"
